2022-05-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/command.cpp (process_commands): Begin
	migration to use existing global variables for location reports
	in diagnostic messages.  Save current file name and line number
	before calling `command_loop()` and restore them afterward.
	Also decrement line counter before entering that loop because it
	would be too far advanced by one due to the final newline on a
	parsed input line.

2022-05-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/refer.cpp (main): Report system error on
	`fflush()` failure.  POSIX Issue 2 a.k.a. SUSv2 (1997) specifies
	several possible `errno` values this C standard library function
	can set; see
	<https://pubs.opengroup.org/onlinepubs/007908799/xsh/fflush.html>.

2022-05-05  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Refactor: drop unused function.

	* src/preproc/refer/command.cpp (process_commands): Drop
	definition.
	* src/preproc/refer/command.h (process_commands): Drop
	declaration.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/refer.cpp (do_file): Fix another off-by-one
	line number reporting bug exposed by fix for Savannah #62391.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/refer/tests/report-correct-line-numbers.sh: Add
	more regression tests.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor: boolify.

	* src/preproc/refer/command.cpp (input_stack::push_file): Demote
	and rename local variable from `int` to `bool`.
	(bol): Renamed from this...
	(is_at_beginning_of_line): ...to this.

2022-05-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[refer]: Trivially refactor.

	* src/preproc/refer/command.cpp (input_stack::push_file):
	* src/preproc/refer/refer.cpp (do_file): Drop unnecessary
	construction of integer from integer (return type of `getc()`)